fix(body): @media screen and (max-width: 1035px) {   body {     overflow-x: hidden;   }}

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -72,6 +72,9 @@ header .icon {
 }
 
 @media screen and (max-width: 1035px) {
+  body {
+    overflow-x: hidden;
+  }
   .main-navbar {
     display: flex;
     align-items: center;
